[gd_scene load_steps=7 format=2]

[ext_resource path="res://spookyFace.png" type="Texture" id=1]
[ext_resource path="res://Arrow.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://LightTexture.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[node name="Player" type="RigidBody2D"]
collision_layer = 9
collision_mask = 9
mode = 2
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
scale = Vector2( 0.046875, 0.046875 )
z_index = 3
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 2.0
color = Color( 0.56, 0.56, 0.56, 1 )
shadow_enabled = true

[node name="LightSprite" type="Sprite" parent="."]
modulate = Color( 0.7, 0.378117, 0.077, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Nav" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Nav"]
visible = false
position = Vector2( 96, 0 )
scale = Vector2( 0.03125, 0.03125 )
z_index = 3
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
